# mangaba_ai

./: .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  config.example.json  install_deps.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.py.pre  setup_dev.py
Análise de Feedback de Clientes/: .txt
Aplicações/Criação de Materiais de Treinamento/: .txt
Aplicações/Otimização da Cadeia de Suprimentos/: .txt
Aplicações/Resposta a Crises de RP/: .txt
Aplicações/Suporte à Tomada de Decisão Estratégica/: .txt
Brainstorming de Desenvolvimento de Produto/: .txt
Estratégia de Marketing de Conteúdo/: .tx
Geração de Relatórios de Sustentabilidade/: .txt
Monitoramento de Mídias Sociais/: .txt
Pesquisa de Mercado e Análise Competitiva/: exp.txt
Pesquisa de Tendências Tecnológicas/: .txt
Planejamento de Campanhas Publicitárias/: .txt
Previsão Financeira/: .txt
Qualificação de Leads de Vendas/: .txt
Revisão de Documentos Legais/: .txt
Suporte ao Cliente Automatizado/: .txt
applications/Análise de Riscos de TI/: .txt
applications/Auditoria de Conformidade/: .txt
applications/Gerenciamento de Projetos/: .txt
applications/Planejamento de Eventos Corporativos/: .txt
docs/: agents.md  applications.md  architecture.md  communication.md  conf.py  configuration.md  index.rst  memory.md  models.md  protocols.md  setup.md  tasks.md  tools.md  workflow.md
examples/: basic_usage.py  full_system_example.py  mangaba_ai.ipynb  mangaba_cases.py  market_analysis.py  protocols_example.py  verify_version.py
examples/platform_integrations/: README.md  config.example.json
mangaba/: __init__.py
mangaba.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mangaba_ai/: __init__.py  __main__.py  config.py  logging_config.py  main.py  requirements.txt
tests/: __init__.py  test_basic.py  test_core.py  test_integrations.py  test_performance.py
(+20 files in other folders)
