[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangaba"
dynamic = ["version"]
description = "Framework Python para criacao de equipes de agentes AI autonomos"
readme = "README.md"
authors = [{name = "Dheiver Santos", email = "dheiver.santos@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/dheiver2/mangaba_ai"
"Bug Tracker" = "https://github.com/dheiver2/mangaba_ai/issues"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 